Update homepage HTML
Replaces the existing index.html with an updated homepage version. This update adjusts external links to open in new tabs and includes content and layout refinements for the live CalleVerde.com site.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ early mover advantage</p></li>
 Latino heritage mission</p></li>
 <li><p><strong>Primary Platform:</strong> Instagram</p></li>
 <li>
-  <p><strong>Instagram: </strong><a href="https://www.instagram.com/lilmiquela">https://www.instagram.com/lilmiquela</a></p></li>
+  <p><strong>Instagram: </strong><a href="https://www.instagram.com/lilmiquela" target="_blank" rel="noopener noreferrer">https://www.instagram.com/lilmiquela</a></p></li>
 </ul>
 <h4 id="aitana-lópez"><strong>Aitana López</strong></h4>
 <ul>
@@ -155,7 +155,7 @@ viability, European audience</p></li>
 historical or cultural storytelling</p></li>
 <li><p><strong>Primary Platform:</strong> Instagram</p></li>
 <li> <p><strong>Instagram:</strong>
-    <a href="https://www.instagram.com/fit_aitana">https://www.instagram.com/fit_aitana</a>
+    <a href="https://www.instagram.com/fit_aitana" target="_blank" rel="noopener noreferrer">https://www.instagram.com/fit_aitana</a>
   </p></li>
 </ul>
 <h4 id="shudu-gram"><strong>Shudu Gram</strong></h4>
@@ -168,7 +168,7 @@ sophistication</p></li>
 or education</p></li>
 <li><p><strong>Primary Platform:</strong> Instagram</p></li>
 <li><p><strong>Instagram:</strong>
-    <a href="https://www.instagram.com/shudu.gram">https://www.instagram.com/shudu.gram</a>
+    <a href="https://www.instagram.com/shudu.gram" target="_blank" rel="noopener noreferrer">https://www.instagram.com/shudu.gram</a>
   </p></li>
 </ul>
 <h4 id="neutralina"><strong>Neutralina</strong></h4>
@@ -182,7 +182,7 @@ framing</p></li>
 limited IP extensibility</p></li>
 <li><p><strong>Primary Platform:</strong> Instagram</p></li>
 <li><p><strong>Instagram:</strong>
-    <a href="https://www.instagram.com/neutralina.lu">https://www.instagram.com/neutralina.lu</a>
+    <a href="https://www.instagram.com/neutralina.lu" target="_blank" rel="noopener noreferrer">https://www.instagram.com/neutralina.lu</a>
   </p></li>
 </ul>
 <h3
@@ -204,7 +204,7 @@ relevance</p></li>
 <li><p><strong>Limitations:</strong> Human-dependent, political framing,
 not scalable as IP</p></li>
 <li><p><strong>Instagram:</strong>
-    <a href="https://www.instagram.com/carlos_eduardo_espina">https://www.instagram.com/carlos_eduardo_espina</a>
+    <a href="https://www.instagram.com/carlos_eduardo_espina" target="_blank" rel="noopener noreferrer">https://www.instagram.com/carlos_eduardo_espina</a>
   </p></li>
 </ul>
 	
