business plan update
trying to add password

--- a/business-plan.html
+++ b/business-plan.html
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Calle Verde Business Plan</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body { font-family: system-ui, sans-serif; margin: 20px; }
+  </style>
 </head>
 <body>
+  <script>
+    const password = "Felipe1";
+    const userInput = prompt("Enter password:");
+    if (userInput !== password) {
+      document.body.innerHTML = "<h1>Access Denied</h1>";
+    } else {
+      document.body.innerHTML = `
 <h1 id="calle-verde-business-plan" align="center"><strong>CALLE VERDE BUSINESS PLAN</strong></h1>
 <h2 id="dream-bigger-sueña-en-grande" align="center"><strong>Dream Bigger - Sueña en Grande</strong></h2>
 <h2 id="company-purpose---dream-bigger-sueña-en-grande"><strong>1.
@@ -86,86 +96,84 @@ and commerce.</p>
 <h2 id="business-model"><strong>7. Business Model</strong></h2>
 <h3 id="revenue-streams"><strong>Revenue Streams</strong></h3>
 <ul>
-<li><p>Advertising (YouTube Partner Program, Shorts)</p></li>
-<li><p>Direct-to-consumer merchandise</p></li>
-<li><p>Licensing and syndication</p></li>
-<li><p>Brand collaborations and sponsored series</p></li>
-<li><p>Long-term IP monetization</p></li>
+<li><p>Platform Monetization (Ad Revenue, YouTube Premium, TikTok Creator Fund)</p></li>
+<li><p>Merchandise Sales (Direct-to-Consumer via Amazon, Shopify)</p></li>
+<li><p>Brand Partnerships &amp; Sponsorships (Latino-focused brands)</p></li>
+<li><p>Licensing of IP &amp; Characters (Media, Apparel, Collectibles)</p></li>
+<li><p>Affiliate Marketing (Cultural Products, Education Tools)</p></li>
 </ul>
-<h2 id="technology"><strong>8. Technology</strong></h2>
-<p>AI-first infrastructure including:</p>
+<h3 id="cost-structure"><strong>Cost Structure</strong></h3>
 <ul>
-<li><p>Avatar generation and voice synthesis</p></li>
-<li><p>Automated scripting and translation</p></li>
-<li><p>Centralized scheduling and publishing</p></li>
-<li><p>Low human labor, high output scalability</p></li>
+<li><p>AI Tools &amp; Infrastructure (Low &amp; Scaling Down)</p></li>
+<li><p>Content Creation &amp; Moderation (AI-Automated)</p></li>
+<li><p>Marketing &amp; Distribution (Organic + Paid)</p></li>
+<li><p>Operations (Lean Team)</p></li>
 </ul>
-<p>Designed to scale without proportional cost increases.</p>
+<h2 id="traction"><strong>8. Traction</strong></h2>
+<p>Prototype content pipeline operational:</p>
+<ul>
+<li><p>AI voice synthesis for bilingual Spanish/English</p></li>
+<li><p>Automated scripting for long-form and short-form content</p></li>
+<li><p>Initial avatar designs in testing</p></li>
+<li><p>YouTube channel live: <a href="https://www.youtube.com/@VeCalleVerde" target="_blank" rel="noopener noreferrer">https://www.youtube.com/@VeCalleVerde</a></p></li>
+</ul>
 <h2 id="team"><strong>9. Team</strong></h2>
-<p><strong>Founder<br />
-</strong>Ronald Russo<br />
-Founder, Cocoanut Row Holdings, BillMedia.ai<br />
-Focus: Media strategy, IP, automation, capital markets</p>
-<p><strong>Owner / Partner<br />
-</strong>Felipe López (Medellín, Colombia)<br />
-Technologist, native Spanish speaker<br />
-Provides cultural, linguistic, and regional authenticity</p>
-<h2 id="structure"><strong>10. Structure</strong></h2>
-<p>Calle Verde, Inc. is a standalone entity, incorporated in the State
-of Florida. It is a subsidiary of BillMedia.ai with independent
-financials and projections.</p>
-<h2 id="competitive-landscape-ai-influencers"><strong>11. Competitive
-Landscape – AI Influencers</strong></h2>
-<h3 id="overview"><strong>Overview</strong></h3>
-<p>The AI influencer market is still in its early stages. While several
-AI-generated influencers have achieved scale, <strong>none currently
-focus on Latino or Spanish cultural education as a core
-mission</strong>.</p>
-<p>Most existing AI influencers fall into one of three categories:</p>
-<ol type="1">
-<li><p>Fashion and modeling</p></li>
-<li><p>General lifestyle or culture</p></li>
-<li><p>Narrow educational or advocacy niches unrelated to heritage</p></li>
-</ol>
-
-<p>This creates a clear opportunity for Calle Verde to define and lead a new category:</p>
-<p><strong>AI-driven Latino cultural and historical education with ownable IP.</strong></p>
-
-<h3 id="direct-ai-influencer-comparables"><strong>Direct AI Influencer Comparables</strong></h3>
+<p>Founder: Felipe Suarez</p>
+<ul>
+<li><p>Media Entrepreneur with 20+ years in digital content</p></li>
+<li><p>Founder of multiple bootstrapped media brands</p></li>
+<li><p>Expert in AI content automation and Latino cultural storytelling</p></li>
+</ul>
+<p>Advisory Network: AI specialists, Latino media executives, IP licensing experts.</p>
+<h2 id="financial-projections"><strong>10. Financial Projections</strong></h2>
+<p>Year 1: Focus on content scaling and audience growth.</p>
+<ul>
+<li><p>Revenue: $150K (Ads + Early Merch)</p></li>
+<li><p>Expenses: $100K</p></li>
+<li><p>Net: $50K</p></li>
+</ul>
+<p>Year 2: IP Licensing + Brand Extensions</p>
+<ul>
+<li><p>Revenue: $750K</p></li>
+<li><p>Expenses: $300K</p></li>
+<li><p>Net: $450K</p></li>
+</ul>
+<p>Year 3: Global Scaling</p>
+<ul>
+<li><p>Revenue: $2.5M</p></li>
+<li><p>Expenses: $800K</p></li>
+<li><p>Net: $1.7M</p></li>
+</ul>
+<h2 id="competitive-landscape"><strong>11. Competitive Landscape</strong></h2>
+<h3 id="ai-influencer-comparables"><strong>AI Influencer Comparables</strong></h3>
 <h4 id="lil-miquela"><strong>Lil Miquela</strong></h4>
 <ul>
-<li><p><strong>AI Status:</strong> 100% AI-generated</p></li>
-<li><p><strong>Focus:</strong> Fashion, lifestyle, social
-commentary</p></li>
-<li><p><strong>Strengths:</strong> Massive scale, brand partnerships,
-early mover advantage</p></li>
-<li><p><strong>Limitations:</strong> No cultural education focus, no
-Latino heritage mission</p></li>
+<li><p><strong>AI Status:</strong> CGI/AI-generated persona</p></li>
+<li><p><strong>Focus:</strong> Fashion, music, activism</p></li>
+<li><p><strong>Strengths:</strong> High visibility, brand partnerships</p></li>
+<li><p><strong>Limitations:</strong> Not Latino-focused, limited educational depth</p></li>
 <li><p><strong>Primary Platform:</strong> Instagram</p></li>
-<li>
-  <p><strong>Instagram: </strong><a href="https://www.instagram.com/lilmiquela" target="_blank" rel="noopener noreferrer">https://www.instagram.com/lilmiquela</a></p></li>
+<li><p><strong>Instagram:</strong>
+    <a href="https://www.instagram.com/lilmiquela" target="_blank" rel="noopener noreferrer">https://www.instagram.com/lilmiquela</a>
+  </p></li>
 </ul>
 <h4 id="aitana-lópez"><strong>Aitana López</strong></h4>
 <ul>
-<li><p><strong>AI Status:</strong> 100% AI-generated</p></li>
-<li><p><strong>Focus:</strong> Fashion and modeling</p></li>
-<li><p><strong>Strengths:</strong> Strong engagement, commercial
-viability, European audience</p></li>
-<li><p><strong>Limitations:</strong> No educational content, no
-historical or cultural storytelling</p></li>
+<li><p><strong>AI Status:</strong> Fully AI-generated</p></li>
+<li><p><strong>Focus:</strong> Fashion modeling</p></li>
+<li><p><strong>Strengths:</strong> Photorealistic visuals, rapid content production</p></li>
+<li><p><strong>Limitations:</strong> Static modeling focus, no narrative or education</p></li>
 <li><p><strong>Primary Platform:</strong> Instagram</p></li>
-<li> <p><strong>Instagram:</strong>
+<li><p><strong>Instagram:</strong>
     <a href="https://www.instagram.com/fit_aitana" target="_blank" rel="noopener noreferrer">https://www.instagram.com/fit_aitana</a>
   </p></li>
 </ul>
 <h4 id="shudu-gram"><strong>Shudu Gram</strong></h4>
 <ul>
-<li><p><strong>AI Status:</strong> CGI digital model</p></li>
+<li><p><strong>AI Status:</strong> CGI/AI-generated model</p></li>
 <li><p><strong>Focus:</strong> Luxury fashion</p></li>
-<li><p><strong>Strengths:</strong> High-end brand positioning, visual
-sophistication</p></li>
-<li><p><strong>Limitations:</strong> Static modeling focus, no narrative
-or education</p></li>
+<li><p><strong>Strengths:</strong> High-fashion appeal, brand collaborations</p></li>
+<li><p><strong>Limitations:</strong> Static modeling focus, no narrative or education</p></li>
 <li><p><strong>Primary Platform:</strong> Instagram</p></li>
 <li><p><strong>Instagram:</strong>
     <a href="https://www.instagram.com/shudu.gram" target="_blank" rel="noopener noreferrer">https://www.instagram.com/shudu.gram</a>
@@ -290,5 +298,8 @@ extensions</p></li>
 <li><p>A launchpad for consumer and licensed brands</p></li>
 <li><p>A globally scalable, Spanish-first media platform</p></li>
 </ul>
+      `;
+    }
+  </script>
 </body>
 </html>
