--- a/business-plan.html
+++ b/business-plan.html
@@ -1,305 +1,169 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Calle Verde Business Plan</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Calle Verde — Business Plan</title>
+
+  <!-- ===== FAVICONS ===== -->
+  <link rel="icon" type="image/png" sizes="32x32"
+        href="https://assets.calleverde.com.s3.us-east-2.amazonaws.com/images/favicon-calle-verde-white-32x32-72.png">
+  <link rel="icon" type="image/png" sizes="16x16"
+        href="https://assets.calleverde.com.s3.us-east-2.amazonaws.com/images/favicon-calle-verde-white-16x16-72.png">
+  <link rel="apple-touch-icon" sizes="192x192"
+        href="https://assets.calleverde.com.s3.us-east-2.amazonaws.com/images/favicon-calle-verde-white-192x192-72.png">
+
   <style>
-    body { font-family: system-ui, sans-serif; margin: 20px; }
+    * { box-sizing: border-box; }
+
+    html, body {
+      margin: 0;
+      height: 100%;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont,
+                   "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: #0f5f3a;
+      color: #ffffff;
+    }
+
+    /* ===== PASSWORD GATE ===== */
+    #gate {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .gate-box {
+      background: #ffffff;
+      color: #000000;
+      padding: 40px;
+      border-radius: 20px;
+      width: 360px;
+      text-align: center;
+    }
+
+    .gate-box h2 {
+      margin: 0 0 20px;
+      font-weight: 500;
+    }
+
+    .gate-box input {
+      width: 100%;
+      padding: 14px;
+      font-size: 16px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      margin-bottom: 15px;
+    }
+
+    .gate-box button {
+      width: 100%;
+      padding: 14px;
+      font-size: 15px;
+      border-radius: 999px;
+      border: none;
+      background: #0f5f3a;
+      color: #ffffff;
+      cursor: pointer;
+    }
+
+    .error {
+      color: #c00;
+      margin-top: 12px;
+      display: none;
+      font-size: 14px;
+    }
+
+    /* ===== CONTENT ===== */
+    #content {
+      display: none;
+      min-height: 100vh;
+      padding: 80px 20px 120px;
+      max-width: 960px;
+      margin: 0 auto;
+    }
+
+    h1 {
+      font-weight: 500;
+      margin-bottom: 24px;
+    }
+
+    p {
+      line-height: 1.6;
+      font-size: 16px;
+      margin-bottom: 16px;
+    }
+
+    /* ===== FOOTER ===== */
+    .footer {
+      text-align: center;
+      margin-top: 80px;
+      font-size: 13px;
+      opacity: 0.9;
+    }
+
+    .footer .line1 {
+      margin-bottom: 6px;
+    }
+
+    .footer .line2 a {
+      color: #ffffff;
+      text-decoration: underline;
+    }
   </style>
 </head>
-<body>
-  <script>
-    const password = "Felipe1";
-    const userInput = prompt("Enter password:");
-    if (userInput !== password) {
-      document.body.innerHTML = "<h1>Access Denied</h1>";
-    } else {
-      document.body.innerHTML = `
-<h1 id="calle-verde-business-plan" align="center"><strong>CALLE VERDE BUSINESS PLAN</strong></h1>
-<h2 id="dream-bigger-sueña-en-grande" align="center"><strong>Dream Bigger - Sueña en Grande</strong></h2>
-<h2 id="company-purpose---dream-bigger-sueña-en-grande"><strong>1.
-Company Purpose</strong></h2>
-<p>Calle Verde exists to preserve, modernize, and monetize Latino
-cultural heritage through scalable, AI-driven media.</p>
-<p>We use AI avatar creators, automated content pipelines, and
-culturally authentic storytelling to educate, inspire, and unify Latino
-communities. Our content will initially lead with pop culture news and
-trending topics, while long-form formats, such as Spanish history in the
-United States, will be scaled for evergreen IP.</p>
-<p>Our core objective is to create a portfolio of ownable, high-value IP
-and characters from this content foundation.</p>
-<h2 id="problem"><strong>2. Problem</strong></h2>
-<p>The high-growth AI influencer market lacks a well-rounded and
-culturally authentic ecosystem for the global Latino audience. Existing
-AI influencers primarily focus on fashion, modeling, or narrow niches,
-leaving a massive white space in the cultural and educational media
-landscape.</p>
-<p>There is no major AI-driven IP universe dedicated to celebrating and
-educating on Latino heritage. Consequently, despite the massive Latino
-digital influence, the ownership of scalable, positive, and brand-safe
-IP and monetization platforms remains external to the community.</p>
-<h2 id="solution"><strong>3. Solution</strong></h2>
-<p>Calle Verde solves the white space problem by deploying an AI-first
-media ecosystem focused on the global Latino audience. We will launch a
-portfolio of AI-generated Latino and Latina avatar influencers who
-function as ownable, brand-safe characters to deliver culturally
-authentic content at scale.</p>
-<p>These avatars:</p>
-<ul>
-<li><p>Speak native Spanish and bilingual English</p></li>
-<li><p>Operate continuously across YouTube, Shorts, TikTok, and
-Instagram</p></li>
-<li><p>Are designed as ownable characters, not one-off
-presenters</p></li>
-</ul>
-<p>Our scalable model creates a powerful cycle: Education becomes
-entertainment. Entertainment becomes community. Community becomes
-commerce. The content pipeline is currently operational for voice
-synthesis and scripting, with full AI avatar generation and
-multi-platform publishing being phased in Q3/Q4 of 2026.</p>
-<h2 id="product"><strong>4. Product</strong></h2>
-<h3 id="ai-avatar-media-network"><strong>4.1 AI Avatar Media
-Network</strong></h3>
-<p>Serialized, short-form entertainment and educational content driven
-by character-based storytelling.</p>
-<h3 id="calle-verde-ip-universe"><strong>4.2 Calle Verde IP
-Universe</strong></h3>
-<p>A scalable portfolio of named avatar characters with defined
-personalities, visual identities, and story arcs, serving as the
-foundation for the entire media network.</p>
-<h3 id="merchandise-brand-extensions"><strong>4.3 Merchandise &amp;
-Brand Extensions</strong></h3>
-<p>Culture-first apparel, accessories, and collectibles tied directly to
-the characters and themes of the Calle Verde IP Universe.</p>
-<h2 id="why-now"><strong>5. Why Now</strong></h2>
-<ul>
-<li><p>AI avatar creation is now cost-efficient and scalable.</p></li>
-<li><p>The high-value, long-form content model provides deep, evergreen
-IP that can be atomized into scalable short-form videos for maximum
-platform discovery and reach.</p></li>
-<li><p>Latino demographic growth and consumer buying power continue to
-accelerate, creating a massive, underserved media market.</p></li>
-<li><p>Platform algorithms are increasingly rewarding consistency,
-evergreen educational content, and character-based
-storytelling.</p></li>
-</ul>
-<h2 id="market-opportunity"><strong>6. Market Opportunity</strong></h2>
-<ul>
-<li><p>U.S. Latino population: ~65M and growing</p></li>
-<li><p>Global Spanish-speaking population: 500M+</p></li>
-<li><p>Latino consumer buying power: ~$3 trillion</p></li>
-</ul>
-<p>Calle Verde sits at the intersection of media, education, culture,
-and commerce.</p>
-<h2 id="business-model"><strong>7. Business Model</strong></h2>
-<h3 id="revenue-streams"><strong>Revenue Streams</strong></h3>
-<ul>
-<li><p>Platform Monetization (Ad Revenue, YouTube Premium, TikTok Creator Fund)</p></li>
-<li><p>Merchandise Sales (Direct-to-Consumer via Amazon, Shopify)</p></li>
-<li><p>Brand Partnerships &amp; Sponsorships (Latino-focused brands)</p></li>
-<li><p>Licensing of IP &amp; Characters (Media, Apparel, Collectibles)</p></li>
-<li><p>Affiliate Marketing (Cultural Products, Education Tools)</p></li>
-</ul>
-<h3 id="cost-structure"><strong>Cost Structure</strong></h3>
-<ul>
-<li><p>AI Tools &amp; Infrastructure (Low &amp; Scaling Down)</p></li>
-<li><p>Content Creation &amp; Moderation (AI-Automated)</p></li>
-<li><p>Marketing &amp; Distribution (Organic + Paid)</p></li>
-<li><p>Operations (Lean Team)</p></li>
-</ul>
-<h2 id="traction"><strong>8. Traction</strong></h2>
-<p>Prototype content pipeline operational:</p>
-<ul>
-<li><p>AI voice synthesis for bilingual Spanish/English</p></li>
-<li><p>Automated scripting for long-form and short-form content</p></li>
-<li><p>Initial avatar designs in testing</p></li>
-<li><p>YouTube channel live: <a href="https://www.youtube.com/@VeCalleVerde" target="_blank" rel="noopener noreferrer">https://www.youtube.com/@VeCalleVerde</a></p></li>
-</ul>
-<h2 id="team"><strong>9. Team</strong></h2>
-<p>Founder: Felipe Suarez</p>
-<ul>
-<li><p>Media Entrepreneur with 20+ years in digital content</p></li>
-<li><p>Founder of multiple bootstrapped media brands</p></li>
-<li><p>Expert in AI content automation and Latino cultural storytelling</p></li>
-</ul>
-<p>Advisory Network: AI specialists, Latino media executives, IP licensing experts.</p>
-<h2 id="financial-projections"><strong>10. Financial Projections</strong></h2>
-<p>Year 1: Focus on content scaling and audience growth.</p>
-<ul>
-<li><p>Revenue: $150K (Ads + Early Merch)</p></li>
-<li><p>Expenses: $100K</p></li>
-<li><p>Net: $50K</p></li>
-</ul>
-<p>Year 2: IP Licensing + Brand Extensions</p>
-<ul>
-<li><p>Revenue: $750K</p></li>
-<li><p>Expenses: $300K</p></li>
-<li><p>Net: $450K</p></li>
-</ul>
-<p>Year 3: Global Scaling</p>
-<ul>
-<li><p>Revenue: $2.5M</p></li>
-<li><p>Expenses: $800K</p></li>
-<li><p>Net: $1.7M</p></li>
-</ul>
-<h2 id="competitive-landscape"><strong>11. Competitive Landscape</strong></h2>
-<h3 id="ai-influencer-comparables"><strong>AI Influencer Comparables</strong></h3>
-<h4 id="lil-miquela"><strong>Lil Miquela</strong></h4>
-<ul>
-<li><p><strong>AI Status:</strong> CGI/AI-generated persona</p></li>
-<li><p><strong>Focus:</strong> Fashion, music, activism</p></li>
-<li><p><strong>Strengths:</strong> High visibility, brand partnerships</p></li>
-<li><p><strong>Limitations:</strong> Not Latino-focused, limited educational depth</p></li>
-<li><p><strong>Primary Platform:</strong> Instagram</p></li>
-<li><p><strong>Instagram:</strong>
-    <a href="https://www.instagram.com/lilmiquela" target="_blank" rel="noopener noreferrer">https://www.instagram.com/lilmiquela</a>
-  </p></li>
-</ul>
-<h4 id="aitana-lópez"><strong>Aitana López</strong></h4>
-<ul>
-<li><p><strong>AI Status:</strong> Fully AI-generated</p></li>
-<li><p><strong>Focus:</strong> Fashion modeling</p></li>
-<li><p><strong>Strengths:</strong> Photorealistic visuals, rapid content production</p></li>
-<li><p><strong>Limitations:</strong> Static modeling focus, no narrative or education</p></li>
-<li><p><strong>Primary Platform:</strong> Instagram</p></li>
-<li><p><strong>Instagram:</strong>
-    <a href="https://www.instagram.com/fit_aitana" target="_blank" rel="noopener noreferrer">https://www.instagram.com/fit_aitana</a>
-  </p></li>
-</ul>
-<h4 id="shudu-gram"><strong>Shudu Gram</strong></h4>
-<ul>
-<li><p><strong>AI Status:</strong> CGI/AI-generated model</p></li>
-<li><p><strong>Focus:</strong> Luxury fashion</p></li>
-<li><p><strong>Strengths:</strong> High-fashion appeal, brand collaborations</p></li>
-<li><p><strong>Limitations:</strong> Static modeling focus, no narrative or education</p></li>
-<li><p><strong>Primary Platform:</strong> Instagram</p></li>
-<li><p><strong>Instagram:</strong>
-    <a href="https://www.instagram.com/shudu.gram" target="_blank" rel="noopener noreferrer">https://www.instagram.com/shudu.gram</a>
-  </p></li>
-</ul>
-<h4 id="neutralina"><strong>Neutralina</strong></h4>
-<ul>
-<li><p><strong>AI Status:</strong> AI-generated persona</p></li>
-<li><p><strong>Focus:</strong> Science education and gender
-equality</p></li>
-<li><p><strong>Strengths:</strong> Mission-driven content, educational
-framing</p></li>
-<li><p><strong>Limitations:</strong> Not culture- or heritage-focused,
-limited IP extensibility</p></li>
-<li><p><strong>Primary Platform:</strong> Instagram</p></li>
-<li><p><strong>Instagram:</strong>
-    <a href="https://www.instagram.com/neutralina.lu" target="_blank" rel="noopener noreferrer">https://www.instagram.com/neutralina.lu</a>
-  </p></li>
-</ul>
-<h3
-id="relevant-non-ai-latino-influencers-context-only"><strong>Relevant
-Non-AI Latino Influencers (Context Only)</strong></h3>
-<blockquote>
-<p>These creators are <strong>not AI-generated</strong>, but they shape
-audience expectations and content formats within the Latino digital
-ecosystem.</p>
-</blockquote>
-<h4 id="carlos-eduardo-espina"><strong>Carlos Eduardo
-Espina</strong></h4>
-<ul>
-<li><p><strong>Status:</strong> Human creator</p></li>
-<li><p><strong>Focus:</strong> Latino identity, immigration, civic
-engagement</p></li>
-<li><p><strong>Strengths:</strong> Massive reach, cultural
-relevance</p></li>
-<li><p><strong>Limitations:</strong> Human-dependent, political framing,
-not scalable as IP</p></li>
-<li><p><strong>Instagram:</strong>
-    <a href="https://www.instagram.com/carlos_eduardo_espina" target="_blank" rel="noopener noreferrer">https://www.instagram.com/carlos_eduardo_espina</a>
-  </p></li>
-</ul>
-	
-<table style="width:100%;">
-  <colgroup>
-    <col style="width: 20%" />
-    <col style="width: 20%" />
-    <col style="width: 20%" />
-    <col style="width: 20%" />
-    <col style="width: 20%" />
-  </colgroup>
-  <thead>
-    <tr>
-      <th style="text-align: center;"><strong>Brand / Influencer</strong></th>
-      <th style="text-align: center;"><strong>AI-Generated</strong></th>
-      <th style="text-align: center;"><strong>Core Focus</strong></th>
-      <th style="text-align: center;"><strong>Latino Heritage Education</strong></th>
-      <th style="text-align: center;"><strong>Scalable IP</strong></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Lil Miquela</td>
-      <td>Yes</td>
-      <td>Fashion / Culture</td>
-      <td>No</td>
-      <td>Partial</td>
-    </tr>
-    <tr>
-      <td>Aitana López</td>
-      <td>Yes</td>
-      <td>Fashion</td>
-      <td>No</td>
-      <td>Partial</td>
-    </tr>
-    <tr>
-      <td>Shudu Gram</td>
-      <td>Yes (CGI)</td>
-      <td>Luxury Fashion</td>
-      <td>No</td>
-      <td>Low</td>
-    </tr>
-    <tr>
-      <td>Neutralina</td>
-      <td>Yes</td>
-      <td>Science / Education</td>
-      <td>No</td>
-      <td>Limited</td>
-    </tr>
-    <tr>
-      <td><strong>Calle Verde</strong></td>
-      <td><strong>Yes</strong></td>
-      <td><strong>Latino Cultural Education</strong></td>
-      <td><strong>Yes</strong></td>
-      <td><strong>High</strong></td>
-    </tr>
-  </tbody>
-</table>
 
-<h3 id="strategic-differentiation"><strong>Strategic
-Differentiation</strong></h3>
-<p>Calle Verde is <strong>not competing head-to-head</strong> with
-fashion avatars or lifestyle influencers.</p>
-<p>Instead, Calle Verde:</p>
-<ul>
-<li><p>Owns a <strong>white-space category</strong></p></li>
-<li><p>Builds <strong>educational-first AI characters</strong></p></li>
-<li><p>Focuses on <strong>heritage, history, and
-identity</strong></p></li>
-<li><p>Creates <strong>evergreen, licensable IP</strong></p></li>
-<li><p>Integrates naturally into merchandise and brand
-extensions</p></li>
-</ul>
-<p>No existing AI influencer currently combines:<br />
-</p>
-<p><strong>Latino culture + education + automation + IP
-  ownership</strong>.</p>
-<h2 id="vision"><strong>12. Vision</strong></h2>
-<p>Calle Verde aims to become:</p>
-<ul>
-<li><p>A trusted Latino cultural media brand</p></li>
-<li><p>A library of evergreen entertainment and educational IP</p></li>
-<li><p>A launchpad for consumer and licensed brands</p></li>
-<li><p>A globally scalable, Spanish-first media platform</p></li>
-</ul>
-      `;
+<body>
+
+<!-- PASSWORD SCREEN -->
+<div id="gate">
+  <div class="gate-box">
+    <h2>Business Plan Access</h2>
+    <input type="password" id="pw" placeholder="Enter password" />
+    <button onclick="unlock()">Enter</button>
+    <div class="error" id="err">Incorrect password</div>
+  </div>
+</div>
+
+<!-- PROTECTED CONTENT -->
+<div id="content">
+
+  <h1>Calle Verde — Business Plan</h1>
+
+  <p>
+    This page contains confidential strategic, financial, and
+    operational information related to Calle Verde.
+  </p>
+
+  <p>
+    Replace this section with your full business plan content,
+    embedded PDFs, or structured sections as needed.
+  </p>
+
+  <footer class="footer">
+    <div class="line1">MADE WITH ♥ IN PALM BEACH</div>
+    <div class="line2">
+      2026 ©
+      <a href="https://www.calleverde.com" target="_blank" rel="noopener noreferrer">
+        Calle Verde, Inc.
+      </a>
+      All Rights Reserved.
+    </div>
+  </footer>
+
+</div>
+
+<script>
+  function unlock() {
+    const pw = document.getElementById("pw").value;
+    if (pw === "Felipe1") {
+      document.getElementById("gate").style.display = "none";
+      document.getElementById("content").style.display = "block";
+    } else {
+      document.getElementById("err").style.display = "block";
     }
-  </script>
+  }
+</script>
+
 </body>
 </html>
