--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
 
 <style>
 :root{--bg:#0d623a;--btn-bg:#f1f1f1;--btn-text:#111;--muted:rgba(255,255,255,.85);--maxw:720px;--btn-h:68px;--btn-w:min(520px,86vw);--radius:9999px}*{box-sizing:border-box}html,body{height:100%}body{margin:0;background:var(--bg);color:#fff;font-family:'Roboto',system-ui,-apple-system,Segoe UI,Helvetica,Arial,sans-serif;}.page{min-height:100vh;display:flex;align-items:center;justify-content:center;padding:56px 18px 40px}.card{width:100%;max-width:var(--maxw);display:flex;flex-direction:column;align-items:center;text-align:center}.logo{width:min(360px,78vw);height:auto;display:block;margin:0 auto 26px}.mission{font-size:18px;line-height:1.5;color:var(--muted);max-width:520px;margin:0 auto 30px}.buttons{width:100%;display:flex;flex-direction:column;gap:18px;align-items:center;margin:0 0 34px}.btn{width:var(--btn-w);height:var(--btn-h);border-radius:var(--radius);display:inline-flex;align-items:center;justify-content:center;text-decoration:none;background:var(--btn-bg);color:var(--btn-text);font-weight:500;letter-spacing:.02em;text-transform:uppercase;font-size:14px;border:1px solid rgba(0,0,0,.05);transition:transform .2s ease,background-color .2s ease;user-select:none}.btn:hover{transform:scale(1.05);background:#FFDB00;font-weight:bold}.btn:active{transform:scale(1.0);background:#FFDB00;filter:brightness(0.96)}.footer{margin-top:10px;font-size:12px;line-height:1.5;color:rgba(255,255,255,.8)}@media (max-width:420px){.mission{font-size:16px}:root{--btn-h:62px}}
+	.footer{
+  width:100%;
+  background:#000;
+  color:#fff;
+  padding:22px 12px;
+  text-align:center;
+  font-size:12px;
+  line-height:1.5;
+}
+
+.footer .line1{
+  margin-bottom:6px;
+  letter-spacing:1px;
+}
+
+.footer a{
+  color:#fff;
+  text-decoration:underline;
+}
+
 </style>
 </head>
 
@@ -27,10 +47,17 @@
 <a class="btn" href="#">AMAZON / SHOP</a>
 <a class="btn" href="https://www.youtube.com/@VeCalleVerde" target="_blank" rel="noopener noreferrer">YOUTUBE</a>
 <a class="btn" href="#">INSTAGRAM</a>
-<a class="btn" href="business-plan.html" target="_blank" rel="noopener noreferrer">BUSINESS PLAN</a>
+<a class="btn" href="../business-plan.html" target="_blank" rel="noopener noreferrer">BUSINESS PLAN</a>
 <a class="btn" href="mailto:info@calleverde.com" target="_blank" rel="noopener noreferrer">INFO@CALLEVERDE.COM</a>
 </div>
 </section>
 </main>
+		<footer class="footer">
+  <div class="line1">MADE WITH ♥ IN PALM BEACH</div>
+  <div class="line2">
+    2026 © <a href="https://www.calleverde.com" target="_blank" rel="noopener noreferrer">Calle Verde, Inc.</a> All Rights Reserved.
+  </div>
+</footer>
+
 </body>
 </html>
