--- a/index.html
+++ b/index.html
@@ -173,9 +173,12 @@
         
         <nav class="buttons" aria-label="Main Links">
             <a class="btn" href="#">AMAZON / SHOP</a>
+			<a class="btn" href="https://www.facebook.com/VeCalleVerde" target="_blank" rel="noopener noreferrer">FACEBOOK</a>
+			<a class="btn" href="https://www.instagram.com/VeCalleVerde" target="_blank" rel="noopener noreferrer">INSTAGRAM</a>
+			<a class="btn" href="https://www.linkedin.com/in/VeCalleVerde" target="_blank" rel="noopener noreferrer">LINKEDIN</a>
+			<a class="btn" href="https://www.pinterest.com/vecalleverde" target="_blank" rel="noopener noreferrer">PINTEREST</a>
 			<a class="btn" href="https://www.youtube.com/@VeCalleVerde" target="_blank" rel="noopener noreferrer">YOUTUBE</a>
-            <a class="btn" href="#">INSTAGRAM</a>
-            <a class="btn" href="../../business-plan.html" target="_blank" rel="noopener noreferrer">BUSINESS PLAN</a>
+			<a class="btn" href="https://x.com/VeCalleVerde" target="_blank" rel="noopener noreferrer">X</a>
             <a class="btn" href="mailto:info@calleverde.com">INFO@CALLEVERDE.COM</a>
         </nav>
     </section>
@@ -184,7 +187,7 @@
 <footer class="footer">
     <div class="line1">MADE WITH ♥ IN PALM BEACH</div>
     <div class="line2">
-    <i>2026 © <a href="https://www.calleverde.com" class="footer-link">Calle Verde, Inc.</a> All Rights Reserved.</i>
+    <i>2026 © <a href="https://calleverde.com" class="footer-link">Calle Verde, Inc.</a> All Rights Reserved.</i>
 </div>
 </footer>
 
