--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
         filter: brightness(0.96);
     }
 
-    /* Combined and cleaned up footer styles */
     .footer {
         flex-shrink: 0;
         width: 100%;
@@ -187,9 +186,10 @@
 <footer class="footer">
     <div class="line1">MADE WITH ♥ IN PALM BEACH</div>
     <div class="line2">
-    <i>2026 © <a href="https://calleverde.com" class="footer-link">Calle Verde, Inc.</a> All Rights Reserved.</i>
+    <i>2026 © Calle Verde, Inc. All Rights Reserved.</i>
 </div>
 </footer>
 
 </body>
+
 </html>
