--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         transform: scale(1.05);
         background: var(--accent);
         font-weight: bold;
-        outline: none; /* Add custom focus ring if preferred */
+        out: none; /* Add custom focus ring if preferred */
     }
 
     .btn:active {
@@ -132,7 +132,7 @@
         padding: 22px 12px;
         text-align: center;
         font-size: 12px;
-        line-height: 1.5;
+        -height: 1.5;
     }
 
     .footer .line1 {
@@ -185,11 +185,11 @@
 
 <footer class="footer">
     <div class="line1">MADE WITH ♥ IN PALM BEACH</div>
-    <div class="line2">
-    <i>2026 © Calle Verde, Inc. All Rights Reserved.</i>
-</div>
+    <div class="line2"><i>2026 © Calle Verde, Inc. All Rights Reserved.</i></div>
+	<div class="line3">Calle Verde is part of the CocoanutRow.com Group</div>
 </footer>
 
 </body>
 
 </html>
+
