--- a/index.html
+++ b/index.html
@@ -186,10 +186,11 @@
 <footer class="footer">
     <div class="line1">MADE WITH ♥ IN PALM BEACH</div>
     <div class="line2"><i>2026 © Calle Verde, Inc. All Rights Reserved.</i></div>
-	<div class="line3">Calle Verde is part of the CocoanutRow.com Group</div>
+	<div class="line3">Calle Verde is part of the <a class="btn" href="https://www.CocoanutRow.com" target="_blank" rel="noopener noreferrer">CocoanutRow.com</a> Group</div>
 </footer>
 
 </body>
 
 </html>
+
 
