--- a/index.html
+++ b/index.html
@@ -188,14 +188,9 @@
 
 <footer class="footer">
     <div class="footer-line">MADE WITH ♥ IN PALM BEACH</div>
-    
-    <div class="footer-line">
-        <i>2026 © <a href="https://calleverde.com">Calle Verde, Inc.</a> All Rights Reserved.</i>
-    </div>
-    
-    <div class="footer-line">
-        Calle Verde is part of <a href="https://www.CocoanutRow.com" target="_blank" rel="noopener noreferrer">CocoanutRow.com</a>
-    </div>
+    <div class="footer-line">Calle Verde is part of <a href="https://www.CocoanutRow.com" target="_blank" rel="noopener noreferrer">CocoanutRow.com</a></div>
+    <div class="footer-line"><i>2026 © Calle Verde, Inc. All Rights Reserved.</i></div>
 </footer>
 </body>
 </html>
+
