--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <p class="mission">Calle Verde brings Latino culture to life through music, media, and modern storytelling.</p>
         
         <nav class="buttons" aria-label="Main Links">
-            <a class="btn" href="#">AMAZON / SHOP</a>
+            <a class="btn" href="#">AMAZON SHOP (Coming Soon)</a>
 			<a class="btn" href="https://www.facebook.com/VeCalleVerde" target="_blank" rel="noopener noreferrer">FACEBOOK</a>
 			<a class="btn" href="https://www.instagram.com/VeCalleVerde" target="_blank" rel="noopener noreferrer">INSTAGRAM</a>
 			<a class="btn" href="https://www.linkedin.com/in/VeCalleVerde" target="_blank" rel="noopener noreferrer">LINKEDIN</a>
@@ -193,4 +193,5 @@
 </footer>
 </body>
 </html>
+
 
