--- a/index.html
+++ b/index.html
@@ -187,11 +187,12 @@
 </main>
 
 <footer class="footer">
-    <div class="footer-line">MADE WITH ♥ IN PALM BEACH</div>
+    <div class="footer-line">MADE WITH ♥ IN MEDELLÍN</div>
     <div class="footer-line">Calle Verde is part of <a href="https://www.CocoanutRow.com" target="_blank" rel="noopener noreferrer">CocoanutRow.com</a></div>
     <div class="footer-line"><i>2026 © Calle Verde, Inc. All Rights Reserved.</i></div>
 </footer>
 </body>
 </html>
+
 
 
