--- a/index.html
+++ b/index.html
@@ -196,8 +196,10 @@
 
 <footer class="footer">
     <div class="footer-line">MADE WITH ♥ IN MEDELLÍN</div>
-    <div class="footer-line">Calle Verde is part of <a href="https://www.CocoanutRow.com" target="_blank" rel="noopener noreferrer">CocoanutRow.com</a></div>
+    <div class="footer-line">Calle Verde is part of the CORO family:</div>
+	<div class="footer-line"><a href="https://www.CocoanutRow.com" target="_blank" rel="noopener noreferrer">CocoanutRow.com</a> | <a href="https://www.BillMedia.ai" target="_blank" rel="noopener noreferrer">BillMedia.ai</a></div>
     <div class="footer-line"><i>2026 © Calle Verde, Inc. All Rights Reserved.</i></div>
 </footer>
 </body>
 </html>
+
