--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <a class="btn" href="#">AMAZON SHOP (Coming Soon)</a>
 			<a class="btn" href="https://www.facebook.com/VeCalleVerde" target="_blank" rel="noopener noreferrer">FACEBOOK</a>
 			<a class="btn" href="https://www.instagram.com/VeCalleVerde" target="_blank" rel="noopener noreferrer">INSTAGRAM</a>
-			<a class="btn" href="https://www.linkedin.com/in/VeCalleVerde" target="_blank" rel="noopener noreferrer">LINKEDIN</a>
+			<a class="btn" href="https://www.linkedin.com/company/calleverde" target="_blank" rel="noopener noreferrer">LINKEDIN</a>
 			<a class="btn" href="https://www.pinterest.com/vecalleverde" target="_blank" rel="noopener noreferrer">PINTEREST</a>
 			<a class="btn" href="https://tiktok.com/@calleverde" target="_blank" rel="noopener noreferrer">TIKTOK</a>
 			<a class="btn" href="https://www.youtube.com/@VeCalleVerde" target="_blank" rel="noopener noreferrer">YOUTUBE</a>
@@ -202,5 +202,6 @@
 </footer>
 </body>
 </html>
+
 
 
