--- a/index.html
+++ b/index.html
@@ -196,12 +196,13 @@
 
 <footer class="footer">
 <div class="footer-line">MADE WITH ♥ IN MEDELLÍN</div>
-<div class="footer-line"><a href="https://www.CocoanutRow.com" target="_blank" rel="noopener noreferrer">CocoanutRow.com</a> - <a href="https://www.BillMedia.ai" target="_blank" rel="noopener noreferrer">BillMedia.ai</a> | <a href="https://www.HouseofStoa.com" target="_blank" rel="noopener noreferrer">HouseofStoa.com</a> | <a href="https://www.StoicMvse.com" target="_blank" rel="noopener noreferrer">StoicMvse.com</a></div>
+<div class="footer-line"><a href="https://www.CocoanutRow.com" target="_blank" rel="noopener noreferrer">CocoanutRow.com</a> - <a href="https://www.BillMedia.ai" target="_blank" rel="noopener noreferrer">BillMedia.ai</a> | <a href="https://www.CalleVerde.com" target="_blank" rel="noopener noreferrer">CalleVerde.com</a> | <a href="https://www.HouseofStoa.com" target="_blank" rel="noopener noreferrer">HouseofStoa.com</a> | <a href="https://www.StoicMvse.com" target="_blank" rel="noopener noreferrer">StoicMvse.com</a></div>
 <div class="footer-line">CALLE VERDE IS A CORO PROPERTY</div>
 <div class="footer-line"><i>2026 © Calle Verde, Inc. All Rights Reserved.</i></div>
 </footer>
 </body>
 </html>
+
 
 
 
