--- a/index.html
+++ b/index.html
@@ -133,15 +133,17 @@
 
 /* Footer CSS */
 
- .footer {
-    flex-shrink: 0;
-    width: 100%;
-    background: #000;
-    color: #fff;
-    padding: 24px 12px;
-    text-align: center;
-    font-size: 12px;
-    line-height: 1.6;
+.footer{
+  width:100%;
+  background-image: url("https://s3.us-east-2.amazonaws.com/assets.calleverde.com/images/background-footer-black.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
+  color:#fff;
+  padding:28px 12px;
+  text-align:center;
+  font-size:12px;
+  line-height:1.5;
 }
 
 /* This one rule formats all three lines at once */
@@ -202,12 +204,3 @@
 </footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
